CLOUDSC-V2: Bring in the CLOUDSC kernel and execute via blocking driver

--- a/src/prototype2/CMakeLists.txt
+++ b/src/prototype2/CMakeLists.txt
@@ -1,3 +1,5 @@
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+
 ecbuild_add_library(
     TARGET  dwarf-cloudsc-v2-lib
     DEFINITIONS
@@ -5,9 +7,20 @@ ecbuild_add_library(
     INCLUDES
         ${SERIALBOX_INCLUDE_DIRS}
     SOURCES 
-        modules/parkind1.F90    	    
-        cloudsc/cloudsc_global_state_mod.F90
+        modules/parkind1.F90
+        modules/yoecldp.F90
+        modules/yommp0.F90
+        modules/yomcst.F90
+        modules/yoethf.F90
+        modules/yoephli.F90
+        modules/yomjfh.F90
+        modules/routines.F90
+        modules/abor1.F90
         cloudsc/load_state_mod.F90
+        cloudsc/cloudsc_global_state_mod.F90
+        cloudsc/cloudsc_driver_mod.F90
+        cloudsc/cloudsc.F90
+        cloudsc/cuadjtq.F90
     LIBS
         ${SERIALBOX_FORTRAN_LIBRARIES}
 )
