--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,35 +9,46 @@
 ###############################################################################
 
 # define minimum version of cmake required
-cmake_minimum_required(VERSION 2.8.4 FATAL_ERROR)
+cmake_minimum_required( VERSION 3.6 FATAL_ERROR )
 
 set( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../ecbuild/cmake" )
 set( CMAKE_BUILD_TYPE None )
-
-# define the project
-project(dwarf-P-cloudMicrophysics-IFSScheme)
 
 set(ENABLE_OS_TYPES_TEST       OFF   CACHE BOOL " ")
 set(ENABLE_OS_FUNCTIONS_TEST   OFF   CACHE BOOL " ")
 set(ENABLE_LARGE_FILE_SUPPORT  OFF   CACHE BOOL " ")
 set(ENABLE_OS_ENDINESS_TEST    OFF   CACHE BOOL " ")
 
+# define the project
+project(dwarf-P-cloudMicrophysics-IFSScheme VERSION 1.1 LANGUAGES C CXX Fortran )
+
 # include ecbuild required commands
 include(ecbuild_system NO_POLICY_SCOPE)
 ecbuild_requires_macro_version(2.0)
 ecbuild_declare_project()
-ecbuild_enable_fortran(REQUIRED MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/module)
 
 include(CompilerFlags)
+
+find_package( Boost )
+
+find_package( OpenMP COMPONENTS Fortran )
+
+## set( BUILD_SHARED_LIBS OFF )
+
+set( SERIALBOX_USE_SHARED_LIBS ON )
+# Find installed version of serialbox
+find_package( Serialbox )
 
 # build executables
 add_subdirectory(src)
 
 # documentation
+find_package( Latex )
 ecbuild_add_option(FEATURE DOCS
                    DESCRIPTION "Documentation"
                    DEFAULT OFF
-                   REQUIRED_PACKAGES "Latex")
+                   CONDITION Latex_FOUND)
+
 
 if(HAVE_DOCS)
   add_subdirectory(doc)
