Adapt to shared version of serialbox

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@
 ###############################################################################
 
 # define minimum version of cmake required
-cmake_minimum_required( VERSION 3.6 FATAL_ERROR )
+cmake_minimum_required( VERSION 3.12 FATAL_ERROR )
 
 set( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../ecbuild/cmake" )
 set( CMAKE_BUILD_TYPE None )
@@ -20,24 +20,27 @@ set(ENABLE_LARGE_FILE_SUPPORT  OFF   CACHE BOOL " ")
 set(ENABLE_OS_ENDINESS_TEST    OFF   CACHE BOOL " ")
 
 # define the project
-project(dwarf-P-cloudMicrophysics-IFSScheme VERSION 1.1 LANGUAGES C CXX Fortran )
+project(dwarf-P-cloudMicrophysics-IFSScheme VERSION 1.1 LANGUAGES C Fortran )
 
 # include ecbuild required commands
 include(ecbuild_system NO_POLICY_SCOPE)
-ecbuild_requires_macro_version(2.0)
+ecbuild_requires_macro_version(2.99)
 ecbuild_declare_project()
 
 include(CompilerFlags)
 
-find_package( Boost )
-
 find_package( OpenMP COMPONENTS Fortran )
 
-## set( BUILD_SHARED_LIBS OFF )
-
-set( SERIALBOX_USE_SHARED_LIBS ON )
 # Find installed version of serialbox
 find_package( Serialbox )
+if( Serialbox_FOUND AND SERIALBOX_HAS_FORTRAN )
+  if( NOT SERIALBOX_HAS_FORTRAN )
+    message( STATUS "Serialbox found has no Fortran support... Certain features or prototypes may not be compiled." )
+    set( HAVE_SERIALBOX FALSE )
+  else()
+    set( HAVE_SERIALBOX TRUE )
+  endif()
+endif()
 
 # build executables
 add_subdirectory(src)
