CLOUDSC-Fortran: Rename V2 and separate validation into utilities lib
The "modern" Fortran version is now called `dwarf-cloudsc-fortran` and
the redundant `cloudsc` subdir has been removed.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_subdirectory(prototype1)
 add_subdirectory(common)
-add_subdirectory(prototype2)
+add_subdirectory(cloudsc_fortran)
 add_subdirectory(prototype3)
